--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Website</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
 
@@ -48,74 +49,73 @@
         </div>
         <div class="col-lg-6">
             <button class="btn btn-danger">Dec, 24th 2022</button>
-                <H3>Associate Software Engineering Bootcamp</H3>
-                <span>
-                    <i class="bi-calender"></i>Date and Time
-                </span>
-                <p>Mon, December 24, 2022 <BR></BR>
-                    7:00 PM – 10:00 PM EAT
-                </p>
-                <P>Free</P>
-                <a href="#" class="btn btn-primary rounded-0">Register for this Event</a>
-            </div>
+            <H3>Associate Software Engineering Bootcamp</H3>
+            <span>
+                <i class="bi-calender"></i>Date and Time
+            </span>
+            <p>Mon, December 24, 2022 <BR></BR>
+                7:00 PM – 10:00 PM EAT
+            </p>
+            <P>Free</P>
+            <a href="#" class="btn btn-primary rounded-0">Register for this Event</a>
         </div>
     </div>    
-        <div class="row py-5">
-            <h3>Other Upcoming Events</h3>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card rounded-0 border-0 shadow">
-                    <img src="images/Web-3.png">
-                  <div class="card-body">
-                     <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
-                     <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
-                      <p class="fw-lighter">
-                        <small>NOIR Gallery • Village Market, Nairobi County</small>
-                    </p>
-                    <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>  
-                    </div>
+    <div class="row py-5">
+        <h3>Other Upcoming Events</h3>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card rounded-0 border-0 shadow">
+                <img src="images/Web-3.png">
+                <div class="card-body">
+                    <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
+                    <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
+                    <p class="fw-lighter">
+                    <small>NOIR Gallery • Village Market, Nairobi County</small>
+                </p>
+                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>  
                 </div>
-            </div>       
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card rounded-0 border-0 shadow">
-                    <img src="images/Web-3.png">
-                  <div class="card-body">
-                     <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
-                     <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
-                      <p class="fw-lighter">
-                        <small>NOIR Gallery • Village Market, Nairobi County</small>
-                    </p>
-                    <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>
-                    </div>
+            </div>
+        </div>       
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card rounded-0 border-0 shadow">
+                <img src="images/Software-Development-Bootbamp.png">
+                <div class="card-body">
+                    <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
+                    <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
+                    <p class="fw-lighter">
+                    <small>NOIR Gallery • Village Market, Nairobi County</small>
+                </p>
+                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
-            </div>       
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card rounded-0 border-0 shadow">
-                    <img src="images/Web-3.png">
-                  <div class="card-body">
-                     <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
-                     <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
-                      <p class="fw-lighter">
-                        <small>NOIR Gallery • Village Market, Nairobi County</small>
-                    </p>
-                    <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>
-                    </div>
+            </div>
+        </div>       
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card rounded-0 border-0 shadow">
+                <img src="images/AWS-Re.png">
+                <div class="card-body">
+                    <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
+                    <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
+                    <p class="fw-lighter">
+                    <small>NOIR Gallery • Village Market, Nairobi County</small>
+                </p>
+                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
-            </div>       
-            <div class="col-lg-3 col-md-6  col-sm-12">
-                <div class="card rounded-0 border-0 shadow">
-                    <img src="images/Web-3.png">
-                  <div class="card-body">
-                     <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
-                     <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
-                      <p class="fw-lighter">
-                        <small>NOIR Gallery • Village Market, Nairobi County</small>
-                    </p>
-                    <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-arrow-up-right-square"></i></a>
-                    </div>
+            </div>
+        </div>       
+        <div class="col-lg-3 col-md-6  col-sm-12">
+            <div class="card rounded-0 border-0 shadow">
+                <img src="images/software-bootcamp.png">
+                <div class="card-body">
+                    <h5 class="card-tittle fw-light">Web 3 Developer Roadshow 2022 Summit</h5>
+                    <span style="color: #fe7f0a;" class="text-sm-start">Sat, December 10, 10:00 AM</span>
+                    <p class="fw-lighter">
+                    <small>NOIR Gallery • Village Market, Nairobi County</small>
+                </p>
+                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-arrow-up-right-square"></i></a>
                 </div>
-            </div>       
-        </div>
+            </div>
+        </div>       
     </div>
+</div>
 
 
     <script src="bootstrap/js/bootstrap.min.js"></script>
