--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Event Website</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css" class="">
 </head>
 <body>
-
-
-    <nav class="navbar navbar-expand-lg" style="background-color: #71b6fd;color:#ffff">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #71b6fd;color:#ffff">
         <div class="container-fluid">
             <a href="#"class="navbar-brand text-white">Zalegram</a>
             <button type="button">
@@ -25,12 +24,10 @@
                     <a href="#" class="nav-link text-white btn btn-primary float-end">Register</a>
 
                 </div>
-
             </div>
         </div>
-
     </nav>
-<main class="bg-light py-5">
+<main class="bg-light py-5"style="padding-top: 70px  !important ;">
     <section class="text-center">
         <h1 class="fw-light">Events Exclusive for you</h1>
         <p class="fw-light">
@@ -110,10 +107,74 @@
                     <p class="fw-lighter">
                     <small>NOIR Gallery • Village Market, Nairobi County</small>
                 </p>
-                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-arrow-up-right-square"></i></a>
+                <a href="#" class="btn btn-outline-primary rounded-2">RSVP This Event <i class="bi bi-box-arrow-up-right"></i></a>
                 </div>
             </div>
         </div>       
+    </div>
+</div>
+<!-- ========footer section========= -->
+<div class="container-fluid footer py-4">
+    <div class="row">
+        <div class="col-lg-3 col-md-6">
+            <h4>Zalegram Events</h4>
+            <p class="fw-lighter">
+                Bringing people together through live experiences.Discover events that match your passions,or create your own with online ticketing tools.
+
+            </p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h4>Find Events</h4>
+            <p>
+                <a href="#" class="text-decoration-none text-white ">Upcoming events</a>
+            </p>
+            <p>
+                <a href="#" class="text-decoration-none text-white ">Past events</a>
+            </p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h4>Quick Links</h4>
+            <ul class="list-group-flush">
+                <li class="list-group-item">
+                <a href="#" class="text-decoration-none text-white ">Home</a>
+                </li>
+                <li class="list-group-item">
+                <a href="#" class="text-decoration-none text-white ">About Us</a>
+                </li>
+                <li class="list-group-item">
+                <a href="#" class="text-decoration-none text-white ">Contact Us</a>
+                </li>
+                <li class="list-group-item">
+                <a href="#" class="text-decoration-none text-white ">Contact support</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-3 col-md-6">
+            <h4>Lets Connect</h4>
+            <div>
+                <a href="#" class="p-2 me-2 shadow bg-white rounded-1">
+                    <i class="bi bi-twitter"></i>  
+                </a>
+                <a href="#" class="p-2 me-2 shadow bg-white rounded-1">
+                    <i class="bi bi-facebook"></i>  
+                </a>
+                <a href="#" class="p-2 me-2 shadow bg-white rounded-1">
+                    <i class="bi bi-linkedin"></i>  
+                </a>
+                <a href="#" class="p-2 me-2 shadow bg-white rounded-1">
+                    <i class="bi bi-github"></i>  
+                </a>
+                <a href="#" class="p-2 me-2 shadow bg-white rounded-1">
+                    <i class="bi bi-instagram"></i>  
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <hr>
+        <small class="text-center">
+            &copy; Company 2022
+        </small>
     </div>
 </div>
 
