--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #71b6fd;color:#ffff">
         <div class="container-fluid">
             <a href="#"class="navbar-brand text-white">Zalegram</a>
-            <button type="button">
-                <span class="navbar-toggler-icon" data-bs-toggle="collapse" data-bs-target="#displayMenus" aria-controls="displayMenus"aria-expanded="false"aria aria-label="Toggle navigation"></span>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#displayMenus" aria-controls="displayMenus" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="displayMenus">
                 <div class="navbar-nav text">
